--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -10,33 +10,42 @@
 
 <body>
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a>Home <span class="sr-only">(current)</span></a>
-
-        </div>
-        <div>
-          <a></a>
-        </div>
-        <div style="text-align:right; color: black;">
-          <a  href="/user/login">(Login)</a> </div>
-      </div>
-
-    </nav>
 
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">File Management System</h1>
-      </div>
+      <h1 class="display-4">File Management System</h1>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home </a>
+        </li>
+        <li class="nav-item active">
+          <% if (req.session.username != undefined) {%>
+          <a class="nav-link" style="color: black;" href="File/view">File</a>
+          <% } %>
+        </li>
+        <li class="nav-item active">
+          <% if (req.session.username == undefined) { %>
+          <a class="nav-link" style="text-align:right; color: black;" href="/user/login">(Login)</a>
+          <% } %>
+        </li>
+
+      </ul>    
+      <span class="navbar-item">
+        <% if (req.session.username != undefined) {%>
+          Hi, <%= req.session.username %>
+          <% } %>
+      </span>
     </div>
 
-    <%- body%>
-  </body>
+    </nav>
+  </div>
+
+
+
+  <%- body%>
+</body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
