--- a/views/file/upload.ejs
+++ b/views/file/upload.ejs
@@ -1,9 +1,7 @@
 <form action="/file/upload" enctype="multipart/form-data" method="post">
-<div class="form-group">
-    <input type="file" name="file">
-</div>
-    <button type="submit" class="btn btn-primary">upload</button>
-  </form>
+    <div class="form-group">
+        <input type="file" name="file">
 
-
-
+    </div>
+    <input type="submit" value="submit" />
+</form>
