--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -22,7 +22,12 @@
           </li>
           <li class="nav-item active">
             <% if (req.session.username != undefined) {%>
-            <a class="nav-link" style="color: black;" href="/file/view">File</a>
+            <a class="nav-link" style="color: black;" href="/file/upload">File</a>
+            <% } %>
+          </li>
+          <li class="nav-item active">
+            <% if (req.session.username != undefined) {%>
+            <a class="nav-link" style="color: black;" href="/file/uploading">upload</a>
             <% } %>
           </li>
           <li class="nav-item active">
