--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -15,19 +15,19 @@
       <h1 class="display-4">File Management System</h1>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarText">
+      <!-- <div class="collapse navbar-collapse" id="navbarText"> -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home </a>
+            <a class="nav-link" href="/">Home </a>
           </li>
           <li class="nav-item active">
             <% if (req.session.username != undefined) {%>
-            <a class="nav-link" style="color: black;" href="/file/upload">File</a>
+            <a class="nav-link" style="color: black;" href="/file/view">File</a>
             <% } %>
           </li>
           <li class="nav-item active">
             <% if (req.session.username != undefined) {%>
-            <a class="nav-link" style="color: black;" href="/file/uploading">upload</a>
+            <a class="nav-link" style="color: black;" href="/file/upload">upload</a>
             <% } %>
           </li>
           <li class="nav-item active">
@@ -42,13 +42,14 @@
           Hi, <%= req.session.username %>
           <% } %>
         </span>
-      </div>
+      <!-- </div> -->
 
     </nav>
-
+    
     <%- body%>
+    
   </div>
-
+ 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
