--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -2,12 +2,12 @@
   
     <div class="form-group">
       <label for="exampleInputEmail1">Username</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="username">
+      <input type="text" class="form-control"  name="username">
     </div>
     
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+      <input type="password" class="form-control"  name="password">
     </div>
     
     <button type="submit" class="btn btn-primary">Sign in</button>
