--- a/views/file/rename.ejs
+++ b/views/file/rename.ejs
@@ -1,4 +1,4 @@
-<form action="/file/rename/<%= file.id%>" method="POST">
+<form action="/file/rename/<%= file.id%>" method="POST" onsubmit="submitForm(this);return false">
 
 <div>
     <label>Origin name: <%= file.filename %></label>
@@ -13,28 +13,28 @@
 </form>
 
 
-<!-- <script>
-    async function submitForm(oFormElement,id) {
+<script>
+    async function submitForm(oFormElement) {
 
-        var response = await fetch("/file/rename"+id, {
+        var response = await fetch(oFormElement.action, {
             method: oFormElement.method,
             credentials: 'same-origin',
             body: new FormData(oFormElement),
         });
 
         if (response.ok) {
-            // for res.ok() or res.json()
+              // for res.ok() or res.json()
             alert("rename suceesful");
-            location.href = "/file/view"
-            
+            location.href= "/file/view"
+            var name = req.session.username ; 
         } else if (response.status == 401) {
             var data = await response.text();   // for res.send()
             alert(data);
         } else {
             alert(response.statusText);
         }
-
+        
 
     };
 
-</script> -->
+</script>
