--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,40 +16,41 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <!-- <div class="collapse navbar-collapse" id="navbarText"> -->
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home </a>
-          </li>
-          <li class="nav-item active">
-            <% if (req.session.username != undefined) {%>
-            <a class="nav-link" style="color: black;" href="/file/view">File</a>
-            <% } %>
-          </li>
-          <li class="nav-item active">
-            <% if (req.session.username != undefined) {%>
-            <a class="nav-link" style="color: black;" href="/file/upload">upload</a>
-            <% } %>
-          </li>
-          <li class="nav-item active">
-            <% if (req.session.username == undefined) { %>
-            <a class="nav-link" style="text-align:right; color: black;" href="/user/login">(Login)</a>
-            <% } %>
-          </li>
-
-        </ul>
-        <span class="navbar-item">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home </a>
+        </li>
+        <li class="nav-item active">
           <% if (req.session.username != undefined) {%>
-          Hi, <%= req.session.username %>
+          <a class="nav-link" style="color: black;" href="/file/view">File</a>
           <% } %>
-        </span>
+        </li>
+        <li class="nav-item active">
+          <% if (req.session.username != undefined) {%>
+          <a class="nav-link" style="color: black;" href="/file/upload">upload</a>
+          <% } %>
+        </li>
+        <li class="nav-item active">
+          <% if (req.session.username == undefined) { %>
+          <a class="nav-link" style="text-align:right; color: black;" href="/user/login">(Login)</a>
+          <% } %>
+        </li>
+
+      </ul>
+      <span class="navbar-item">
+        <% if (req.session.username != undefined) {%>
+        Hi, <%= req.session.username %>
+        <button type="button" class="btn btn-danger" onclick="logout()">logout</button>
+        <% } %>
+      </span>
       <!-- </div> -->
 
     </nav>
-    
+
     <%- body%>
-    
+
   </div>
- 
+
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -57,3 +58,19 @@
   integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script>
+
+  async function logout() {
+    var response = await fetch("/logout", {
+            method: "DELETE",
+            credentials: 'same-origin',
+        });
+        // if (response.ok) {
+        //     alert("logout suceesful");
+        //     location.href = "/";
+
+        // }
+
+
+  }
+</script>
