fix delete function,share function and README

--- a/views/file/rename.ejs
+++ b/views/file/rename.ejs
@@ -24,7 +24,7 @@
 
         if (response.ok) {
               // for res.ok() or res.json()
-            alert("rename suceesful");
+            alert("rename sucessfully");
             location.href= "/file/view"
             var name = req.session.username ; 
         } else if (response.status == 401) {
