--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -18,7 +18,11 @@
       <!-- <div class="collapse navbar-collapse" id="navbarText"> -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
+          <% if (req.session.username == undefined) { %>
           <a class="nav-link" href="/">Home </a>
+          <% }else{ %>
+            <a class="nav-link" href="/file/view">Home </a>
+            <% } %>
         </li>
         <li class="nav-item active">
           <% if (req.session.username != undefined) {%>
@@ -30,18 +34,27 @@
           <a class="nav-link" style="color: black;" href="/file/upload">upload</a>
           <% } %>
         </li>
+        <li>
+          <% if (req.session.username != undefined) { %>
+            <a class="nav-link" style="text-align:right; color: black;" href="/file/shareFiles">share with me</a>
+            <% } %>
+        </li>
         <li class="nav-item active">
           <% if (req.session.username == undefined) { %>
           <a class="nav-link" style="text-align:right; color: black;" href="/user/login">(Login)</a>
           <% } %>
         </li>
+        
 
       </ul>
       <span class="navbar-item">
         <% if (req.session.username != undefined) {%>
         Hi, <%= req.session.username %>
         <button type="button" class="btn btn-danger" onclick="logout()">logout</button>
-        <% } %>
+        <% }else{ %>
+          <a class="btn btn-primary" href="/user/signup" role="button">Sign up</a>
+
+          <% } %>
       </span>
       <!-- </div> -->
 
@@ -65,11 +78,11 @@
             method: "DELETE",
             credentials: 'same-origin',
         });
-        // if (response.ok) {
-        //     alert("logout suceesful");
-        //     location.href = "/";
+        if (response.ok) {
+            alert("logout suceesful");
+            location.href = "/";
 
-        // }
+        }
 
 
   }
